syntax = "proto3";

package aspb;

import "aspb/anime_season.proto";
import "nfpb/genre.proto";
import "nfpb/studio.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/aspb";

message CreateAnimeSeasonInfoRequest {
  int64          seasonID  = 1;
  repeated int32 genreIDs  = 2;
  repeated int32 studioIDs = 3;
}

message CreateAnimeSeasonInfoResponse {
  AnimeSeasonResponse animeSeason = 1;
  repeated nfpb.Genre genres      = 2;
  repeated nfpb.Studio studios    = 3;
}